--- a/using.ipynb
+++ b/using.ipynb
@@ -9,7 +9,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### 1、debug yolov5-",
+   "source": "### 1、debug yolov5-fpn",
    "id": "8a6441c283d636b4"
   },
   {
@@ -17,7 +17,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/coco.yaml --weights '' --cfg models/hub/yolov5s-fpn.yaml --img 640 --epochs 1000 --batch-size -1"
+   ],
    "id": "52b12d1b1087415a"
   }
  ],
