--- a/using.ipynb
+++ b/using.ipynb
@@ -9,7 +9,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### 1、debug yolov5-fpn",
+   "source": "### 1、debug yolov5s-fpn",
    "id": "8a6441c283d636b4"
   },
   {
@@ -19,7 +19,9 @@
    "execution_count": null,
    "source": [
     "%cd yolov5\n",
-    "python train.py --data data/coco.yaml --weights '' --cfg models/hub/yolov5s-fpn.yaml --img 640 --epochs 1000 --batch-size -1"
+    "python train.py --data data/coco.yaml --weights '' --cfg models/hub/yolov5s-fpn.yaml --img 640 --epochs 1000 --batch-size -1\n",
+    "\n",
+    "# 使用yolov5s-fpn进行训练，训练结果在/runs/train/exp/下，跑一个epoch的时间大约是25分钟，总共跑了xx个epoch"
    ],
    "id": "52b12d1b1087415a"
   }
