--- a/using.ipynb
+++ b/using.ipynb
@@ -23,7 +23,20 @@
     "\n",
     "# 使用yolov5s-fpn进行训练，训练结果在/runs/train/exp/下，跑一个epoch的时间大约是25分钟，总共跑了xx个epoch"
    ],
-   "id": "52b12d1b1087415a"
+   "id": "467b7784dc54a950"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/coco.yaml --weights '' --cfg models/hub/yolov5s-bifpn.yaml --img 640 --epochs 2000 --batch-size -1\n",
+    "\n",
+    "# 使用yolov5s-bifpn进行训练，训练结果在/runs/train/exp2/下，跑一个epoch的时间大约是25分钟，总共跑了xx个epoch"
+   ],
+   "id": "6da445c73926819a"
   }
  ],
  "metadata": {
