--- a/using.ipynb
+++ b/using.ipynb
@@ -33,10 +33,33 @@
    "source": [
     "%cd yolov5\n",
     "python train.py --data data/coco.yaml --weights '' --cfg models/hub/yolov5s-bifpn.yaml --img 640 --epochs 2000 --batch-size -1\n",
-    "\n",
-    "# 使用yolov5s-bifpn进行训练，训练结果在/runs/train/exp2/下，跑一个epoch的时间大约是25分钟，总共跑了xx个epoch"
+    "python train.py --resume ./runs/train/exp2/weights/last.pt\n",
+    "# 使用yolov5s-bifpn进行训练，训练结果在/runs/train/exp2/下，跑一个epoch的时间大约是25分钟，总共跑了1914个epoch"
    ],
-   "id": "6da445c73926819a"
+   "id": "c90f4d8b4e2c0e82"
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s-fpn.yaml --img 640 --epochs 10000 --batch-size -1"
+   ],
+   "id": "8ec7c5ab7a2f260f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "88f91d7d3ac91ec7"
   }
  ],
  "metadata": {
