--- a/using.ipynb
+++ b/using.ipynb
@@ -47,7 +47,8 @@
    "cell_type": "code",
    "source": [
     "%cd yolov5\n",
-    "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s-fpn.yaml --img 640 --epochs 10000 --batch-size -1"
+    "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s-fpn.yaml --img 640 --epochs 10000 --batch-size -1\n",
+    "# 使用yolov5s-fpn进行训练，训练结果在/runs/train/exp3/下，跑一个epoch的时间为1.5min，总共跑了388个epoch"
    ],
    "id": "8ec7c5ab7a2f260f",
    "outputs": [],
@@ -58,7 +59,11 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s-bifpn.yaml --img 640 --epochs 10000 --batch-size -1\n",
+    "# 使用yolov5s-bifpn进行训练，训练结果在/runs/train/exp4/下，跑一个epoch的时间为1.5min，总共跑了xxx个epoch"
+   ],
    "id": "88f91d7d3ac91ec7"
   }
  ],
