--- a/using.ipynb
+++ b/using.ipynb
@@ -1,70 +1,86 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# this file is the process of using(training)",
-   "id": "86e31093ae5b1f05"
+   "id": "86e31093ae5b1f05",
+   "metadata": {},
+   "source": [
+    "# this file is the process of using(training)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### 1、debug yolov5s-fpn",
-   "id": "8a6441c283d636b4"
+   "id": "8a6441c283d636b4",
+   "metadata": {},
+   "source": [
+    "### 1、debug yolov5s-fpn"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "467b7784dc54a950",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%cd yolov5\n",
     "python train.py --data data/coco.yaml --weights '' --cfg models/hub/yolov5s-fpn.yaml --img 640 --epochs 1000 --batch-size -1\n",
     "\n",
-    "# 使用yolov5s-fpn进行训练，训练结果在/runs/train/exp/下，跑一个epoch的时间大约是25分钟，总共跑了xx个epoch"
-   ],
-   "id": "467b7784dc54a950"
+    "# 使用yolov5s-fpn进行训练，训练结果在/runs/train/exp/下，跑一个epoch的时间大约是25分钟，总共跑了1000个epoch"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "c90f4d8b4e2c0e82",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%cd yolov5\n",
     "python train.py --data data/coco.yaml --weights '' --cfg models/hub/yolov5s-bifpn.yaml --img 640 --epochs 2000 --batch-size -1\n",
     "python train.py --resume ./runs/train/exp2/weights/last.pt\n",
     "# 使用yolov5s-bifpn进行训练，训练结果在/runs/train/exp2/下，跑一个epoch的时间大约是25分钟，总共跑了1914个epoch"
-   ],
-   "id": "c90f4d8b4e2c0e82"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ec7c5ab7a2f260f",
    "metadata": {
     "jupyter": {
      "is_executing": true
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "%cd yolov5\n",
     "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s-fpn.yaml --img 640 --epochs 10000 --batch-size -1\n",
     "# 使用yolov5s-fpn进行训练，训练结果在/runs/train/exp3/下，跑一个epoch的时间为1.5min，总共跑了388个epoch"
-   ],
-   "id": "8ec7c5ab7a2f260f",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "88f91d7d3ac91ec7",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%cd yolov5\n",
     "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s-bifpn.yaml --img 640 --epochs 10000 --batch-size -1\n",
-    "# 使用yolov5s-bifpn进行训练，训练结果在/runs/train/exp4/下，跑一个epoch的时间为1.5min，总共跑了xxx个epoch"
-   ],
-   "id": "88f91d7d3ac91ec7"
+    "# 使用yolov5s-bifpn进行训练，训练结果在/runs/train/exp4/下，跑一个epoch的时间为1.5min，总共跑了708个epoch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aea8dff07950552e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s-transformer.yaml --img 640 --epochs 10000 --batch-size -1\n",
+    "# 使用yolov5s-transformer进行训练，训练结果在/runs/train/exp5/下，跑一个epoch的时间为1.5min，总共跑了xxx个epoch"
+   ]
   }
  ],
  "metadata": {
