--- a/using.ipynb
+++ b/using.ipynb
@@ -79,8 +79,20 @@
    "source": [
     "%cd yolov5\n",
     "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s-transformer.yaml --img 640 --epochs 10000 --batch-size -1\n",
-    "# 使用yolov5s-transformer进行训练，训练结果在/runs/train/exp5/下，跑一个epoch的时间为1.5min，总共跑了xxx个epoch"
+    "# 使用yolov5s-transformer进行训练，训练结果在/runs/train/exp5/下，跑一个epoch的时间为1.5min，总共跑了409个epoch"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/minicoco.yaml --weights '' --cfg models/yolov5s.yaml --img 640 --epochs 10000 --batch-size -1\n",
+    "# 使用yolov5s进行训练，训练结果在/runs/train/exp6/下，跑一个epoch的时间为1.5min，总共跑了xxx个epoch"
+   ],
+   "id": "82bb9035e164a1c3"
   }
  ],
  "metadata": {
