--- a/using.ipynb
+++ b/using.ipynb
@@ -90,9 +90,69 @@
    "source": [
     "%cd yolov5\n",
     "python train.py --data data/minicoco.yaml --weights '' --cfg models/yolov5s.yaml --img 640 --epochs 10000 --batch-size -1\n",
-    "# 使用yolov5s进行训练，训练结果在/runs/train/exp6/下，跑一个epoch的时间为1.5min，总共跑了xxx个epoch"
+    "# 使用yolov5s进行训练，训练结果在/runs/train/exp6/下，跑一个epoch的时间为1.5min，总共跑了468个epoch"
    ],
    "id": "82bb9035e164a1c3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/minicoco.yaml --weights '' --cfg models/hub/yolov5s_focalpan.yaml --img 640 --epochs 10000 --batch-size -1\n",
+    "# 使用yolov5s_focalpan进行训练，训练结果在/runs/train/exp7/下，跑一个epoch的时间为1.5min，总共跑了627个epoch"
+   ],
+   "id": "98b0a690a2f8cdbe"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/DSMD.yaml --weights '' --cfg models/hub/yolov5s_focalpan_DSMD.yaml --img 640 --epochs 10000 --batch-size -1\n",
+    "# 使用yolov5s_focalpan进行训练，训练结果在/runs/train/exp8/下，跑一个epoch的时间为2min，总共跑了152个epoch"
+   ],
+   "id": "c243fd5c5c808e06"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/DSMD.yaml --weights '' --cfg models/hub/yolov5s-bifpn_DSMD.yaml --img 640 --epochs 150 --batch-size -1\n",
+    "# 使用yolov5s_focalpan进行训练，训练结果在/runs/train/exp9/下，跑一个epoch的时间为2min，总共跑了150个epoch"
+   ],
+   "id": "b317cd8f42cf6708"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/DSMD.yaml --weights '' --cfg models/hub/yolov5s-panet_DSMD.yaml --img 640 --epochs 150 --batch-size -1\n",
+    "# 使用yolov5s_focalpan进行训练，训练结果在/runs/train/exp10/下，跑一个epoch的时间为2min，总共跑了150个epoch"
+   ],
+   "id": "d99d0144b8976c38"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%cd yolov5\n",
+    "python train.py --data data/DSMD.yaml --weights '' --cfg models/hub/yolov5s_DSMD.yaml --img 640 --epochs 150 --batch-size -1\n",
+    "# 使用yolov5s_focalpan进行训练，训练结果在/runs/train/exp11/下，跑一个epoch的时间为2min，总共跑了150个epoch"
+   ],
+   "id": "6d742055e81ea79e"
   }
  ],
  "metadata": {
